--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
     <div class="container">
         <h1>제17회 부산불꽃축제</h1>
         <h2>2022.12.17.토. 광안리해수욕장 일원</h2>
-        <h3>재개알림</h3>
-        <div class="line_02"></div>
+        <div class="woro">
+            <div class="line_02"></div>
+            <div class="wbox">
+                <h3>재개알림</h3>    
+            </div>
+            <div class="line_03"></div>
+        </div>
+        <h4>17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다.</h4>
+        <p>불꽃이 내리는 부산!</p>
+        <p>세계인과 함께하는 부산불꽃축제로 여러분을 초대합니다.</p>
     </div>
 </body>
 </html>
