--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="line_03"></div>
         </div>
         <h4>17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다.</h4>
-        <p>불꽃이 내리는 부산!</p>
-        <p>세계인과 함께하는 부산불꽃축제로 여러분을 초대합니다.</p>
+        <p>불꽃이 내리는 부산!<br>세계인과 함께하는 부산불꽃축제로 여러분을 초대합니다.</p>
+        <div class="wbox_01"></div>
     </div>
 </body>
 </html>
