--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
         </div>
         <h4>17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다.</h4>
         <p>불꽃이 내리는 부산!<br>세계인과 함께하는 부산불꽃축제로 여러분을 초대합니다.</p>
-        <div class="wbox_01"></div>
+        <div class="wbox_01">
+            <p class="p_1">제17회  부산불꽃축제</p><p class="p_2"> ← <img src="images/play.png" alt=""><img src="images/pause.png" alt=""> →</p>
+        </div>
+    </div>
+    <div class="conduct">
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
 </body>
 </html>
