--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="conduct">
         <ul>
-            <li></li>
+            <li><img src="images/trip.jpg" alt=""></li>
             <li></li>
         </ul>
     </div>
