--- a/index.html
+++ b/index.html
@@ -49,8 +49,24 @@
     </div>
     <div class="conduct">
         <ul>
-            <li><img src="images/trip.jpg" alt=""></li>
-            <li></li>
+            <li class="trip">
+                <img src="images/trip.jpg" alt="">
+                <img src="images/Layer.png" alt="" class="layer">
+                <div class="circle">Monthly<br>Busan</div>
+                <p>이달의<br>
+                    부산여행지</p>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_01.png" alt="">
+                <div class="button">
+                    <img src="images/click.png" alt="">
+                    <p>241</p>
+                    <img src="images/commentary.png" alt="">
+                    <p>2</p>
+                    <img src="images/thumb-up.png" alt="">
+                    <p>0</p>
+                </div>
+            </li>
         </ul>
     </div>
 </body>
