--- a/index.html
+++ b/index.html
@@ -58,6 +58,80 @@
             </li>
             <li class="conduct_01">
                 <img src="images/Layer_01.png" alt="">
+                <h2>나만을 위한 소소 문화 투어</h2>
+                <div class="button">
+                    <img src="images/click.png" alt="">
+                    <p>241</p>
+                    <img src="images/commentary.png" alt="">
+                    <p>2</p>
+                    <img src="images/thumb-up.png" alt="">
+                    <p>0</p>
+                </div>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_01.png" alt="">
+                <h2>지구를 지키는 비건트래블!</h2>
+                <div class="button">
+                    <img src="images/click.png" alt="">
+                    <p>204</p>
+                    <img src="images/commentary.png" alt="">
+                    <p>2</p>
+                    <img src="images/thumb-up.png" alt="">
+                    <p>2</p>
+                </div>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_01.png" alt="">
+                <h2>기운차게 시작하는 아침, 일출 조깅코
+                    스 추천</h2>
+                <div class="button">
+                    <img src="images/click.png" alt="">
+                    <p>241</p>
+                    <img src="images/commentary.png" alt="">
+                    <p>2</p>
+                    <img src="images/thumb-up.png" alt="">
+                    <p>0</p>
+                </div>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_01.png" alt="">
+                <h2>가을 힐링 산책</h2>
+                <div class="button">
+                    <img src="images/click.png" alt="">
+                    <p>241</p>
+                    <img src="images/commentary.png" alt="">
+                    <p>2</p>
+                    <img src="images/thumb-up.png" alt="">
+                    <p>0</p>
+                </div>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_01.png" alt="">
+                <h2>나이트 투어 명소 용두산빌리지</h2>
+                <div class="button">
+                    <img src="images/click.png" alt="">
+                    <p>241</p>
+                    <img src="images/commentary.png" alt="">
+                    <p>2</p>
+                    <img src="images/thumb-up.png" alt="">
+                    <p>0</p>
+                </div>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_01.png" alt="">
+                <h2>속 시원한 해장 별미 3선</h2>
+                <div class="button">
+                    <img src="images/click.png" alt="">
+                    <p>241</p>
+                    <img src="images/commentary.png" alt="">
+                    <p>2</p>
+                    <img src="images/thumb-up.png" alt="">
+                    <p>0</p>
+                </div>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_01.png" alt="">
+                <h2>뉴진스코드 in 부산 여행코스 총정리</h2>
                 <div class="button">
                     <img src="images/click.png" alt="">
                     <p>241</p>
