--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     부산여행지</p>
             </li>
             <li class="conduct_01">
-                <img src="images/Layer_01.png" alt="">
+                <img src="images/Layer_01.png" alt="" class="img">
                 <h2>나만을 위한 소소 문화 투어</h2>
                 <div class="button">
                     <img src="images/click.png" alt="">
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li class="conduct_01">
-                <img src="images/Layer_01.png" alt="">
+                <img src="images/Layer_02.png" alt="" class="img">
                 <h2>지구를 지키는 비건트래블!</h2>
                 <div class="button">
                     <img src="images/click.png" alt="">
@@ -81,65 +81,117 @@
                 </div>
             </li>
             <li class="conduct_01">
-                <img src="images/Layer_01.png" alt="">
+                <img src="images/Layer_03.png" alt="" class="img">
                 <h2>기운차게 시작하는 아침, 일출 조깅코
                     스 추천</h2>
                 <div class="button">
                     <img src="images/click.png" alt="">
-                    <p>241</p>
+                    <p>270</p>
                     <img src="images/commentary.png" alt="">
-                    <p>2</p>
+                    <p>3</p>
                     <img src="images/thumb-up.png" alt="">
-                    <p>0</p>
+                    <p>5</p>
                 </div>
             </li>
             <li class="conduct_01">
-                <img src="images/Layer_01.png" alt="">
+                <img src="images/Layer_04.png" alt="" class="img">
                 <h2>가을 힐링 산책</h2>
                 <div class="button">
                     <img src="images/click.png" alt="">
-                    <p>241</p>
+                    <p>365</p>
                     <img src="images/commentary.png" alt="">
                     <p>2</p>
                     <img src="images/thumb-up.png" alt="">
-                    <p>0</p>
+                    <p>2</p>
                 </div>
             </li>
             <li class="conduct_01">
-                <img src="images/Layer_01.png" alt="">
+                <img src="images/Layer_05.png" alt="" class="img">
                 <h2>나이트 투어 명소 용두산빌리지</h2>
                 <div class="button">
                     <img src="images/click.png" alt="">
-                    <p>241</p>
+                    <p>726</p>
                     <img src="images/commentary.png" alt="">
-                    <p>2</p>
+                    <p>3</p>
                     <img src="images/thumb-up.png" alt="">
-                    <p>0</p>
+                    <p>4</p>
                 </div>
             </li>
             <li class="conduct_01">
-                <img src="images/Layer_01.png" alt="">
+                <img src="images/Layer_06.png" alt="" class="img">
                 <h2>속 시원한 해장 별미 3선</h2>
                 <div class="button">
                     <img src="images/click.png" alt="">
-                    <p>241</p>
+                    <p>669</p>
                     <img src="images/commentary.png" alt="">
                     <p>2</p>
                     <img src="images/thumb-up.png" alt="">
-                    <p>0</p>
+                    <p>3</p>
                 </div>
             </li>
             <li class="conduct_01">
-                <img src="images/Layer_01.png" alt="">
+                <img src="images/Layer_07.png" alt="" class="img">
                 <h2>뉴진스코드 in 부산 여행코스 총정리</h2>
                 <div class="button">
                     <img src="images/click.png" alt="">
-                    <p>241</p>
+                    <p>1553</p>
                     <img src="images/commentary.png" alt="">
-                    <p>2</p>
+                    <p>4</p>
                     <img src="images/thumb-up.png" alt="">
-                    <p>0</p>
+                    <p>14</p>
                 </div>
+            </li>
+        </ul>
+    </div>
+    <div class="slide">
+        <ul class="ellipse">
+            <li>←</li>
+            <li>→</li>
+        </ul>
+        <p class="text_01">부산 로컬 웹드라마</p>
+        <img src="images/text.png" alt="" class="text_big">
+        <h2>부산 야경촬영지 퀴즈 이벤트</h2>
+    </div>
+    <div class="conduct">
+        <ul>
+            <li class="trip">
+                <img src="images/trip.jpg" alt="">
+                <img src="images/Layer.png" alt="" class="layer">
+                <div class="circle">Monthly<br>Busan</div>
+                <p>이달의<br>
+                    부산여행지</p>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_09.png" alt="" class="img">
+                <h2>2박 3일에 완성하는 부산 완전정복</h2>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_10.png" alt="" class="img">
+                <h2>가파른 절벽 끝에 흰여울문화마을</h2>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_11.png" alt="" class="img">
+                <h2>크리스마스트리의 향연, 부산크리스
+                    마스트리문화축제</h2>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_12.png" alt="" class="img">
+                <h2>방탄소년단(BTS) 정국의 고향, 부산 만
+                    덕동 산책하기</h2>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_13.png" alt="" class="img">
+                <h2>부산 바다의 정석, 해운대해수욕장</h2>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_14.png" alt="" class="img">
+                <h2>친구들과 함께하는 2박 3일 부산 뚜벅
+                    이 여행 코스 추천!</h2>
+            </li>
+            <li class="conduct_01">
+                <img src="images/Layer_15.png" alt="" class="img">
+                <h2>광안리의 밤은 당신의 낮보다 아름답
+                    다</h2>
             </li>
         </ul>
     </div>
