--- a/index.html
+++ b/index.html
@@ -1,199 +1,276 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>부산관광공사</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
     <div class="title">
-        <div class="head">
-            <img src="images/logo.png" alt="">
-            <h1>부산관광공사</h1>
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="">주요사업</a></li>
-                <li><a href="">정보공개</a></li>
-                <li><a href="">알림마당</a></li>
-                <li><a href="">공사소개</a></li>
-            </ul>
-        </div>
-        <div class="lan">
-            <p>LANGUAGE ▼</p>
-            <p class="line"></p>
-            <img src="images/facebook.png" alt="">
-            <img src="images/line.png" alt="">
-            <img src="images/insta.png" alt="">
-            <img src="images/youtube.png" alt="">
-        </div>
-        </div>
+      <div class="head">
+        <img src="images/logo.png" alt="" />
+        <h1>부산관광공사</h1>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="">주요사업</a></li>
+          <li><a href="">정보공개</a></li>
+          <li><a href="">알림마당</a></li>
+          <li><a href="">공사소개</a></li>
+        </ul>
+      </div>
+      <div class="lan">
+        <p>LANGUAGE ▼</p>
+        <p class="line"></p>
+        <img src="images/facebook.png" alt="" />
+        <img src="images/line.png" alt="" />
+        <img src="images/insta.png" alt="" />
+        <img src="images/youtube.png" alt="" />
+      </div>
     </div>
     <div class="container">
-        <h1>제17회 부산불꽃축제</h1>
-        <h2>2022.12.17.토. 광안리해수욕장 일원</h2>
-        <div class="woro">
-            <div class="line_02"></div>
-            <div class="wbox">
-                <h3>재개알림</h3>    
-            </div>
-            <div class="line_03"></div>
+      <h1>제17회 부산불꽃축제</h1>
+      <h2>2022.12.17.토. 광안리해수욕장 일원</h2>
+      <div class="woro">
+        <div class="line_02"></div>
+        <div class="wbox">
+          <h3>재개알림</h3>
         </div>
-        <h4>17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다.</h4>
-        <p>불꽃이 내리는 부산!<br>세계인과 함께하는 부산불꽃축제로 여러분을 초대합니다.</p>
-        <div class="wbox_01">
-            <p class="p_1">제17회  부산불꽃축제</p><p class="p_2"> ← <img src="images/play.png" alt=""><img src="images/pause.png" alt=""> →</p>
-        </div>
+        <div class="line_03"></div>
+      </div>
+      <h4>17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다.</h4>
+      <p>
+        불꽃이 내리는 부산!<br />세계인과 함께하는 부산불꽃축제로 여러분을
+        초대합니다.
+      </p>
+      <div class="wbox_01">
+        <p class="p_1">제17회 부산불꽃축제</p>
+        <p class="p_2">
+          ← <img src="images/play.png" alt="" /><img
+            src="images/pause.png"
+            alt=""
+          />
+          →
+        </p>
+      </div>
     </div>
     <div class="conduct">
-        <ul>
-            <li class="trip">
-                <img src="images/trip.jpg" alt="">
-                <img src="images/Layer.png" alt="" class="layer">
-                <div class="circle">Monthly<br>Busan</div>
-                <p>이달의<br>
-                    부산여행지</p>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_01.png" alt="" class="img">
-                <h2>나만을 위한 소소 문화 투어</h2>
-                <div class="button">
-                    <img src="images/click.png" alt="">
-                    <p>241</p>
-                    <img src="images/commentary.png" alt="">
-                    <p>2</p>
-                    <img src="images/thumb-up.png" alt="">
-                    <p>0</p>
-                </div>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_02.png" alt="" class="img">
-                <h2>지구를 지키는 비건트래블!</h2>
-                <div class="button">
-                    <img src="images/click.png" alt="">
-                    <p>204</p>
-                    <img src="images/commentary.png" alt="">
-                    <p>2</p>
-                    <img src="images/thumb-up.png" alt="">
-                    <p>2</p>
-                </div>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_03.png" alt="" class="img">
-                <h2>기운차게 시작하는 아침, 일출 조깅코
-                    스 추천</h2>
-                <div class="button">
-                    <img src="images/click.png" alt="">
-                    <p>270</p>
-                    <img src="images/commentary.png" alt="">
-                    <p>3</p>
-                    <img src="images/thumb-up.png" alt="">
-                    <p>5</p>
-                </div>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_04.png" alt="" class="img">
-                <h2>가을 힐링 산책</h2>
-                <div class="button">
-                    <img src="images/click.png" alt="">
-                    <p>365</p>
-                    <img src="images/commentary.png" alt="">
-                    <p>2</p>
-                    <img src="images/thumb-up.png" alt="">
-                    <p>2</p>
-                </div>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_05.png" alt="" class="img">
-                <h2>나이트 투어 명소 용두산빌리지</h2>
-                <div class="button">
-                    <img src="images/click.png" alt="">
-                    <p>726</p>
-                    <img src="images/commentary.png" alt="">
-                    <p>3</p>
-                    <img src="images/thumb-up.png" alt="">
-                    <p>4</p>
-                </div>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_06.png" alt="" class="img">
-                <h2>속 시원한 해장 별미 3선</h2>
-                <div class="button">
-                    <img src="images/click.png" alt="">
-                    <p>669</p>
-                    <img src="images/commentary.png" alt="">
-                    <p>2</p>
-                    <img src="images/thumb-up.png" alt="">
-                    <p>3</p>
-                </div>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_07.png" alt="" class="img">
-                <h2>뉴진스코드 in 부산 여행코스 총정리</h2>
-                <div class="button">
-                    <img src="images/click.png" alt="">
-                    <p>1553</p>
-                    <img src="images/commentary.png" alt="">
-                    <p>4</p>
-                    <img src="images/thumb-up.png" alt="">
-                    <p>14</p>
-                </div>
-            </li>
-        </ul>
+      <ul>
+        <li class="trip">
+          <img src="images/trip.jpg" alt="" />
+          <img src="images/Layer.png" alt="" class="layer" />
+          <div class="circle">Monthly<br />Busan</div>
+          <p>
+            이달의<br />
+            부산여행지
+          </p>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_01.png" alt="" class="img" />
+          <h2>나만을 위한 소소 문화 투어</h2>
+          <div class="button">
+            <img src="images/click.png" alt="" />
+            <p>241</p>
+            <img src="images/commentary.png" alt="" />
+            <p>2</p>
+            <img src="images/thumb-up.png" alt="" />
+            <p>0</p>
+          </div>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_02.png" alt="" class="img" />
+          <h2>지구를 지키는 비건트래블!</h2>
+          <div class="button">
+            <img src="images/click.png" alt="" />
+            <p>204</p>
+            <img src="images/commentary.png" alt="" />
+            <p>2</p>
+            <img src="images/thumb-up.png" alt="" />
+            <p>2</p>
+          </div>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_03.png" alt="" class="img" />
+          <h2>기운차게 시작하는 아침, 일출 조깅코 스 추천</h2>
+          <div class="button">
+            <img src="images/click.png" alt="" />
+            <p>270</p>
+            <img src="images/commentary.png" alt="" />
+            <p>3</p>
+            <img src="images/thumb-up.png" alt="" />
+            <p>5</p>
+          </div>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_04.png" alt="" class="img" />
+          <h2>가을 힐링 산책</h2>
+          <div class="button">
+            <img src="images/click.png" alt="" />
+            <p>365</p>
+            <img src="images/commentary.png" alt="" />
+            <p>2</p>
+            <img src="images/thumb-up.png" alt="" />
+            <p>2</p>
+          </div>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_05.png" alt="" class="img" />
+          <h2>나이트 투어 명소 용두산빌리지</h2>
+          <div class="button">
+            <img src="images/click.png" alt="" />
+            <p>726</p>
+            <img src="images/commentary.png" alt="" />
+            <p>3</p>
+            <img src="images/thumb-up.png" alt="" />
+            <p>4</p>
+          </div>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_06.png" alt="" class="img" />
+          <h2>속 시원한 해장 별미 3선</h2>
+          <div class="button">
+            <img src="images/click.png" alt="" />
+            <p>669</p>
+            <img src="images/commentary.png" alt="" />
+            <p>2</p>
+            <img src="images/thumb-up.png" alt="" />
+            <p>3</p>
+          </div>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_07.png" alt="" class="img" />
+          <h2>뉴진스코드 in 부산 여행코스 총정리</h2>
+          <div class="button">
+            <img src="images/click.png" alt="" />
+            <p>1553</p>
+            <img src="images/commentary.png" alt="" />
+            <p>4</p>
+            <img src="images/thumb-up.png" alt="" />
+            <p>14</p>
+          </div>
+        </li>
+      </ul>
     </div>
     <div class="slide">
-        <ul class="ellipse">
-            <li>←</li>
-            <li>→</li>
-        </ul>
-        <p class="text_01">부산 로컬 웹드라마</p>
-        <img src="images/text.png" alt="" class="text_big">
-        <h2>부산 야경촬영지 퀴즈 이벤트</h2>
+      <ul class="ellipse">
+        <li>←</li>
+        <li>→</li>
+      </ul>
+      <p class="text_01">부산 로컬 웹드라마</p>
+      <img src="images/text.png" alt="인싸가 되고싶은 나라" class="text_big" />
+      <h2>부산 야경촬영지 퀴즈 이벤트</h2>
+      <div class="box">
+        <p>
+          <span>[인싸가 되고싶은 나라]</span>티저를 보고 퀴즈를 맞춰주세요!<br />정답자
+          중 추첨을 통해 경품을 드립니다!
+        </p>
+      </div>
+      <div class="event">
+        이벤트기간 <span class="date"> ~ 2022. 12. 7.(수) </span>
+      </div>
     </div>
     <div class="conduct">
-        <ul>
-            <li class="trip">
-                <img src="images/trip.jpg" alt="">
-                <img src="images/Layer.png" alt="" class="layer">
-                <div class="circle">Monthly<br>Busan</div>
-                <p>이달의<br>
-                    부산여행지</p>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_09.png" alt="" class="img">
-                <h2>2박 3일에 완성하는 부산 완전정복</h2>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_10.png" alt="" class="img">
-                <h2>가파른 절벽 끝에 흰여울문화마을</h2>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_11.png" alt="" class="img">
-                <h2>크리스마스트리의 향연, 부산크리스
-                    마스트리문화축제</h2>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_12.png" alt="" class="img">
-                <h2>방탄소년단(BTS) 정국의 고향, 부산 만
-                    덕동 산책하기</h2>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_13.png" alt="" class="img">
-                <h2>부산 바다의 정석, 해운대해수욕장</h2>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_14.png" alt="" class="img">
-                <h2>친구들과 함께하는 2박 3일 부산 뚜벅
-                    이 여행 코스 추천!</h2>
-            </li>
-            <li class="conduct_01">
-                <img src="images/Layer_15.png" alt="" class="img">
-                <h2>광안리의 밤은 당신의 낮보다 아름답
-                    다</h2>
-            </li>
-        </ul>
+      <ul>
+        <li class="trip">
+          <img src="images/trip.jpg" alt="" />
+          <img src="images/Layer.png" alt="" class="layer" />
+          <div class="circle">Monthly<br />Busan</div>
+          <p>
+            이달의<br />
+            부산여행지
+          </p>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_09.png" alt="" class="img" />
+          <h2>2박 3일에 완성하는 부산 완전정복</h2>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_10.png" alt="" class="img" />
+          <h2>가파른 절벽 끝에 흰여울문화마을</h2>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_11.png" alt="" class="img" />
+          <h2>크리스마스트리의 향연, 부산크리스 마스트리문화축제</h2>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_12.png" alt="" class="img" />
+          <h2>방탄소년단(BTS) 정국의 고향, 부산 만 덕동 산책하기</h2>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_13.png" alt="" class="img" />
+          <h2>부산 바다의 정석, 해운대해수욕장</h2>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_14.png" alt="" class="img" />
+          <h2>친구들과 함께하는 2박 3일 부산 뚜벅 이 여행 코스 추천!</h2>
+        </li>
+        <li class="conduct_01">
+          <img src="images/Layer_15.png" alt="" class="img" />
+          <h2>광안리의 밤은 당신의 낮보다 아름답 다</h2>
+        </li>
+      </ul>
     </div>
-</body>
+    <div class="gray">
+      <div class="gray_contents">
+        <div class="number">2/2</div>
+        <div class="text">
+          1월 숨은 여행지 : 겨울, 당<br />
+          신을 위로해줄 부산 바다
+        </div>
+        <ul class="play">
+          <li>←</li>
+          <li class="mid"></li>
+          <li class="mid"></li>
+          <li>→</li>
+        </ul>
+        <ul class="photo">
+          <li>
+            <img src="images/Layer_16.png" alt="" />
+            <p>
+              청사포 조개구이로 마무리<br />
+              하는 그린레일웨이 산책로<br />
+              추천 여행
+            </p>
+          </li>
+          <li>
+            <img src="images/Layer_17.png" alt="" />
+            <p>
+              그동안 몰랐던 인생스폿-<br />
+              부산이색등대 편
+            </p>
+          </li>
+          <li>
+            <img src="images/Layer_18.png" alt="" />
+            <p>
+              영화가 있는 부산, Movie<br />
+              and the City - Our<br />
+              History
+            </p>
+          </li>
+          <li>
+            <img src="images/Layer_19.png" alt="" />
+            <p>
+              퇴근 후 송정 밤바다 리프<br />
+              레시
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="youtube">
+      <ul>
+        <li>
+          <img src="images/y_01.png" alt="" />
+          <div class="text">
+            [Behind EP.5] 일상이 화보인 뉴진스<br />
+            (NewJeans) 광안리 모닝 엿보기!│#<br />
+            뉴진스코드in부산
+          </div>
+          <div class="date">2022-12-01</div>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
