--- a/index.html
+++ b/index.html
@@ -270,6 +270,80 @@
           </div>
           <div class="date">2022-12-01</div>
         </li>
+        <li>
+          <img src="images/y_02.png" alt="" />
+          <div class="text">
+            [Behind EP.4] 뉴진스(NewJeans) 광안리<br />
+            숙소 파자마 패션쇼!! 오늘도 하드 초큼<br />
+            털어봤어요~ │#뉴진스코드in부산
+          </div>
+          <div class="date">2022-12-01</div>
+        </li>
+        <li>
+          <img src="images/y_03.png" alt="" />
+          <div class="text">
+            (SUB) #EVENT [Behind EP.3] 뉴진스<br />
+            (NewJeans) 어텐션(Attention) 낙조분수<br />
+            Performance Full ver. 미방분은 덤이쥬~<br />
+            │ #뉴진스코드
+          </div>
+          <div class="date">2022-12-01</div>
+        </li>
+        <li>
+          <img src="images/y_04.png" alt="" />
+          <div class="text">
+            SUB[Webdrama] 이 참에 여행사 계속<br />
+            해보는 거 어때?#event [브브여행사] 4화
+          </div>
+          <div class="date">2022-12-01</div>
+        </li>
+        <li>
+          <img src="images/y_05.png" alt="" />
+          <div class="text">
+            미식 도시 부산의 맛! 지금 부산의 맛으로<br />
+            당신을 초대합니다.
+          </div>
+          <div class="date">2022-11-28</div>
+        </li>
+        <li>
+          <img src="images/y_06.png" alt="" />
+          <div class="text">
+            [Webdrama] 웨어라유? 제임스!! #event<br />
+            [브브여행사] 3화
+          </div>
+          <div class="date">2022-11-25</div>
+        </li>
+        <li>
+          <img src="images/y_07.png" alt="" />
+          <div class="text">
+            [Webdrama] 넌 늘 그랬어! 어떻게<br />
+            변한게 하나도 없냐? #event [브브여행사]<br />
+            2화
+          </div>
+          <div class="date">2022-11-25</div>
+        </li>
+        <li>
+          <img src="images/y_08.png" alt="" />
+          <div class="text">
+            [Webdrama] 어떻게 전여친이랑 같이<br />
+            일을 하냐고! [브브여행사] 1화
+          </div>
+          <div class="date">2022-11-25</div>
+        </li>
+      </ul>
+      <div class="add">더보기</div>
+    </div>
+    <div class="weather">
+      <div class="blue">부산</div>
+      <div class="text">해양지수</div>
+      <ul>
+        <li><img src="images/Surfing.png" alt="" /></li>
+        <li>
+          <div class="title">송정</div>
+        </li>
+        <li><img src="images/Fishing.png" alt="" /></li>
+        <li><img src="images/Fishing1.png" alt="" /></li>
+        <li><img src="images/Fishing2.png" alt="" /></li>
       </ul>
     </div>
   </body>
