--- a/index.html
+++ b/index.html
@@ -338,13 +338,80 @@
       <div class="text">해양지수</div>
       <ul>
         <li><img src="images/Surfing.png" alt="" /></li>
-        <li>
+        <li class="content">
           <div class="title">송정</div>
+          <ul class="circle">
+            <li class="border_green"></li>
+            <li class="circle_yellow"></li>
+            <li class="border_pink"></li>
+          </ul>
+          <ul class="blue_01">
+            <li class="box">파고</li>
+            <li>0.2m</li>
+          </ul>
+          <ul class="blue_02">
+            <li class="box2">파주기</li>
+            <li>5s</li>
+          </ul>
         </li>
         <li><img src="images/Fishing.png" alt="" /></li>
+        <li class="content">
+          <div class="title">부산남부</div>
+          <ul class="circle">
+            <li class="circle_green"></li>
+            <li class="border_yellow"></li>
+            <li class="border_pink"></li>
+          </ul>
+          <ul class="blue_01">
+            <li class="box">파고</li>
+            <li>0.2~0.3m</li>
+          </ul>
+          <ul class="blue_02">
+            <li class="box3">수온</li>
+            <li>15~ 15℃</li>
+          </ul>
+        </li>
         <li><img src="images/Fishing1.png" alt="" /></li>
+        <li class="content">
+          <div class="title">부산서부</div>
+          <ul class="circle">
+            <li class="border_green"></li>
+            <li class="circle_yellow"></li>
+            <li class="border_pink"></li>
+          </ul>
+          <ul class="blue_01">
+            <li class="box">파고</li>
+            <li>0.4~0.7m</li>
+          </ul>
+          <ul class="blue_02">
+            <li class="box3">수온</li>
+            <li>15~ 15℃</li>
+          </ul>
+        </li>
         <li><img src="images/Fishing2.png" alt="" /></li>
+        <li class="content">
+          <div class="title">부산동부</div>
+          <ul class="circle">
+            <li class="circle_green"></li>
+            <li class="border_yellow"></li>
+            <li class="border_pink"></li>
+          </ul>
+          <ul class="blue_01">
+            <li class="box">파고</li>
+            <li>0.3~0.3m</li>
+          </ul>
+          <ul class="blue_02">
+            <li class="box3">수온</li>
+            <li>16~ 16℃</li>
+          </ul>
+        </li>
       </ul>
+    </div>
+    <div class="blue">
+      <div class="img"></div>
+      <div class="blue_content">
+        <h2>공지사항</h2>
+      </div>
     </div>
   </body>
 </html>
