--- a/index.html
+++ b/index.html
@@ -408,10 +408,89 @@
       </ul>
     </div>
     <div class="blue">
-      <div class="img"></div>
       <div class="blue_content">
-        <h2>공지사항</h2>
+        <div class="left">
+          <h2>공지사항</h2>
+          <p>
+            비짓부산의 이슈와 새로운<br />
+            소식을 전해드립니다
+          </p>
+          <button>더보기</button>
+        </div>
+        <div class="right">
+          <ul>
+            <li>
+              <a href="#x">
+                PIXY와 함께하는 숨은 부산 야경명소 투표 이벤트 당첨자 발표<span
+                  >2022-12-02</span
+                >
+              </a>
+            </li>
+            <li>
+              <a href="#x">
+                제17회 부산블꽃축제 재개 안내<span>2022-12-01</span>
+              </a>
+            </li>
+            <li>
+              <a href="#x"> 2022 해운대 북극곰 축제<span>2022-11-25</span> </a>
+            </li>
+            <li>
+              <a href="#x">
+                [뉴진스 코드 in 부산 론칭 기념 이벤트] 당첨자 안내<span
+                  >2022-11-23</span
+                >
+              </a>
+            </li>
+            <li>
+              <a href="#x">
+                유학생과 함께하는 부산관광 활성화 사업 참가자 모집<span
+                  >2022-11-11</span
+                >
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
+    <ul class="icon">
+      <li>
+        <div class="img">
+          <img src="images/guide-book.png" alt="" />
+        </div>
+        가이드북&지도
+      </li>
+      <li>
+        <div class="img">
+          <img src="images/camera.png" alt="" />
+        </div>
+        부산여행사진
+      </li>
+      <li>
+        <div class="img">
+          <img src="images/editor.png" alt="" />
+        </div>
+        부산여행영상
+      </li>
+      <li>
+        <div class="img">
+          <img src="images/headphone.png" alt="" />
+        </div>
+        문화관광해설사
+      </li>
+      <li>
+        <div class="img">
+          <img src="images/magnifying-glass.png" alt="" />
+        </div>
+        여행큐레이션
+      </li>
+      <li>
+        <div class="img">
+          <img src="images/location.png" alt="" />
+        </div>
+        내주변
+      </li>
+    </ul>
+    <div class="menu"></div>
+    <a href="#" class="top"></a>
   </body>
 </html>
