--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
     <title>부산관광공사</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body>
-    <div class="title">
-      <div class="head">
-        <img src="images/logo.png" alt="" />
-        <h1>부산관광공사</h1>
-      </div>
-      <div class="menu">
-        <ul>
-          <li><a href="">주요사업</a></li>
-          <li><a href="">정보공개</a></li>
-          <li><a href="">알림마당</a></li>
-          <li><a href="">공사소개</a></li>
-        </ul>
-      </div>
-      <div class="lan">
-        <p>LANGUAGE ▼</p>
-        <p class="line"></p>
-        <img src="images/facebook.png" alt="" />
-        <img src="images/line.png" alt="" />
-        <img src="images/insta.png" alt="" />
-        <img src="images/youtube.png" alt="" />
+  <body style="overflow-x: hidden">
+    <div class="title_all">
+      <div class="title">
+        <div class="head">
+          <img src="images/logo.png" alt="" />
+          <h1>부산관광공사</h1>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="">주요사업</a></li>
+            <li><a href="">정보공개</a></li>
+            <li><a href="">알림마당</a></li>
+            <li><a href="">공사소개</a></li>
+          </ul>
+        </div>
+        <div class="lan">
+          <p>LANGUAGE ▼</p>
+          <p class="line"></p>
+          <img src="images/facebook.png" alt="" />
+          <img src="images/line.png" alt="" />
+          <img src="images/insta.png" alt="" />
+          <img src="images/youtube.png" alt="" />
+        </div>
       </div>
     </div>
     <div class="container">
@@ -502,7 +504,7 @@
           <li><img src="images/insta_w.png" alt="" /></li>
           <li><img src="images/b_w.png" alt="" /></li>
         </ul>
-        <ul class="menu">
+        <ul class="menus">
           <li>
             <a href="#x">부산에 가면</a>
             <ul>
@@ -549,6 +551,36 @@
             </ul>
           </li>
         </ul>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer_content">
+        <h2 class="footer_title">부산관광공사</h2>
+        <ul class="footer_icon">
+          <li>f</li>
+          <li>b</li>
+          <li><img src="images/insta_f.png" alt="" /></li>
+          <li><img src="images/youtube_f.png" alt="" /></li>
+        </ul>
+        <p>부산관광안내</p>
+        <div class="f_line"></div>
+        <div class="n1330">1330</div>
+        <div class="f_box">
+          <ul>
+            <li>개인정보처리방침</li>
+            <li>찾아오시는 길</li>
+            <li>전자메일무단수집거부</li>
+          </ul>
+        </div>
+        <div class="f_box2">
+          <div class="f_box2_p">패밀리 사이트</div>
+          <div class="f_box2_p2">▼</div>
+        </div>
+        <div class="copyright_top">
+          <div class="address">
+            부산광역시 부산진구 자유평화로 11 누리엔빌딩 14층
+          </div>
+        </div>
       </div>
     </div>
     <a href="#" class="top"></a>
