--- a/index.html
+++ b/index.html
@@ -580,6 +580,11 @@
           <div class="address">
             부산광역시 부산진구 자유평화로 11 누리엔빌딩 14층
           </div>
+          <div class="tel">TEL : 051-780-2111</div>
+          <div class="fax">FAX : 051-780-2119</div>
+        </div>
+        <div class="copyright">
+          COPYRIGHT (C) 2019 부산관광공사. ALL RIGHTS RESERVED.
         </div>
       </div>
     </div>
