--- a/index.html
+++ b/index.html
@@ -264,7 +264,17 @@
     <div class="youtube">
       <ul>
         <li>
-          <img src="images/y_01.png" alt="" />
+          <iframe
+            class="y_01 y_01m"
+            width="318"
+            height="179"
+            src="https://www.youtube.com/embed/N7Pg3eyYaVg?autoplay=1"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <img src="images/y_01.png" alt="" class="y_01 y_01i" />
           <div class="text">
             [Behind EP.5] 일상이 화보인 뉴진스<br />
             (NewJeans) 광안리 모닝 엿보기!│#<br />
@@ -273,7 +283,17 @@
           <div class="date">2022-12-01</div>
         </li>
         <li>
-          <img src="images/y_02.png" alt="" />
+          <iframe
+            class="y_02 y_02m"
+            width="318"
+            height="179"
+            src="https://www.youtube.com/embed/ARTHsbYS13g?autoplay=1"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <img src="images/y_02.png" alt="" class="y_02 y_02i" />
           <div class="text">
             [Behind EP.4] 뉴진스(NewJeans) 광안리<br />
             숙소 파자마 패션쇼!! 오늘도 하드 초큼<br />
@@ -589,5 +609,6 @@
       </div>
     </div>
     <a href="#" class="top"></a>
+    <iframe src="" frameborder="0"></iframe>
   </body>
 </html>
