--- a/index.html
+++ b/index.html
@@ -302,7 +302,16 @@
           <div class="date">2022-12-01</div>
         </li>
         <li>
-          <img src="images/y_03.png" alt="" />
+          <iframe
+            width="318"
+            height="179"
+            src="https://www.youtube.com/embed/aadgsa12biI?autoplay=1"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <img src="images/y_03.png" alt="" class="y_03 y_03i" />
           <div class="text">
             (SUB) #EVENT [Behind EP.3] 뉴진스<br />
             (NewJeans) 어텐션(Attention) 낙조분수<br />
