--- a/index.html
+++ b/index.html
@@ -221,12 +221,11 @@
           1월 숨은 여행지 : 겨울, 당<br />
           신을 위로해줄 부산 바다
         </div>
-        <ul class="play">
-          <li>←</li>
-          <li class="mid"></li>
-          <li class="mid"></li>
-          <li>→</li>
-        </ul>
+        <div class="play">
+          <button>←</button>
+          <button>||</button>
+          <button>→</button>
+        </div>
         <ul class="photo">
           <li>
             <img src="images/Layer_16.png" alt="" />
@@ -264,17 +263,7 @@
     <div class="youtube">
       <ul>
         <li>
-          <iframe
-            class="y_01 y_01m"
-            width="318"
-            height="179"
-            src="https://www.youtube.com/embed/N7Pg3eyYaVg?autoplay=1"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-          <img src="images/y_01.png" alt="" class="y_01 y_01i" />
+          <img src="images/y_01.png" alt="" />
           <div class="text">
             [Behind EP.5] 일상이 화보인 뉴진스<br />
             (NewJeans) 광안리 모닝 엿보기!│#<br />
@@ -283,17 +272,7 @@
           <div class="date">2022-12-01</div>
         </li>
         <li>
-          <iframe
-            class="y_02 y_02m"
-            width="318"
-            height="179"
-            src="https://www.youtube.com/embed/ARTHsbYS13g?autoplay=1"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-          <img src="images/y_02.png" alt="" class="y_02 y_02i" />
+          <img src="images/y_02.png" alt="" />
           <div class="text">
             [Behind EP.4] 뉴진스(NewJeans) 광안리<br />
             숙소 파자마 패션쇼!! 오늘도 하드 초큼<br />
@@ -302,16 +281,7 @@
           <div class="date">2022-12-01</div>
         </li>
         <li>
-          <iframe
-            width="318"
-            height="179"
-            src="https://www.youtube.com/embed/aadgsa12biI?autoplay=1"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-          <img src="images/y_03.png" alt="" class="y_03 y_03i" />
+          <img src="images/y_03.png" alt="" />
           <div class="text">
             (SUB) #EVENT [Behind EP.3] 뉴진스<br />
             (NewJeans) 어텐션(Attention) 낙조분수<br />
@@ -618,6 +588,5 @@
       </div>
     </div>
     <a href="#" class="top"></a>
-    <iframe src="" frameborder="0"></iframe>
   </body>
 </html>
