--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>부산관광공사</title>
     <link rel="stylesheet" href="css/main.css" />
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="./js/wbox_01.js"></script>
   </head>
   <body style="overflow-x: hidden">
     <div class="title_all">
@@ -33,29 +35,26 @@
       </div>
     </div>
     <div class="container">
-      <h1>제17회 부산불꽃축제</h1>
-      <h2>2022.12.17.토. 광안리해수욕장 일원</h2>
-      <div class="woro">
-        <div class="line_02"></div>
-        <div class="wbox">
-          <h3>재개알림</h3>
-        </div>
-        <div class="line_03"></div>
-      </div>
-      <h4>17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다.</h4>
-      <p>
-        불꽃이 내리는 부산!<br />세계인과 함께하는 부산불꽃축제로 여러분을
-        초대합니다.
-      </p>
+      <ul class="background">
+        <li class="bli">
+          <img src="./images/img.png" alt="" />
+        </li>
+      </ul>
       <div class="wbox_01">
-        <p class="p_1">제17회 부산불꽃축제</p>
-        <p class="p_2">
-          ← <img src="images/play.png" alt="" /><img
-            src="images/pause.png"
-            alt=""
-          />
-          →
-        </p>
+        <ul class="wbox_01ul">
+          <li class="wli"><a href="#x">제17회 부산불꽃축제</a></li>
+          <li class="wli"><a href="#x">2030 부산월드엑스포</a></li>
+        </ul>
+        <div class="p_2">
+          <a href="#x">←</a>
+          <a href="#x" class="start">
+            <img src="images/play.png" alt="" />
+          </a>
+          <a href="#x" class="stop">
+            <img src="images/pause.png" alt="" />
+          </a>
+          <a href="#x">→</a>
+        </div>
       </div>
     </div>
     <div class="conduct">
