--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     </div>
     <div class="container">
       <ul class="background">
-        <li class="bli">
-          <img src="./images/img.png" alt="" />
-        </li>
+        <li class="bli"></li>
       </ul>
       <div class="wbox_01">
         <ul class="wbox_01ul">
