--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
       </div>
     </div>
     <div class="container">
-      <ul class="background">
-        <li class="bli"></li>
-      </ul>
+      <div class="background">
+        <ul class="bul">
+          <li class="bli bli_01"></li>
+          <li class="bli bli_02"></li>
+        </ul>
+      </div>
       <div class="wbox_01">
         <ul class="wbox_01ul">
-          <li class="wli"><a href="#x">제17회 부산불꽃축제</a></li>
-          <li class="wli"><a href="#x">2030 부산월드엑스포</a></li>
+          <li class="wli wli_01"><a href="#x">제17회 부산불꽃축제</a></li>
+          <li class="wli wli_02"><a href="#x">2030 부산월드엑스포</a></li>
         </ul>
         <div class="p_2">
           <a href="#x">←</a>
