--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="container">
       <div class="background">
         <ul class="bul">
-          <li class="bli bli_01"></li>
-          <li class="bli bli_02"></li>
+          <li class="bli bli_01"><img src="./images/img.png" alt=""></li>
+          <li class="bli bli_02"><img src="./images/2030busan.jpg" alt=""></li>
         </ul>
       </div>
       <div class="wbox_01">
@@ -47,14 +47,14 @@
           <li class="wli wli_02"><a href="#x">2030 부산월드엑스포</a></li>
         </ul>
         <div class="p_2">
-          <a href="#x">←</a>
+          <a href="#x" class="left">←</a>
           <a href="#x" class="start">
             <img src="images/play.png" alt="" />
           </a>
           <a href="#x" class="stop">
             <img src="images/pause.png" alt="" />
           </a>
-          <a href="#x">→</a>
+          <a href="#x" class="right">→</a>
         </div>
       </div>
     </div>
