--- a/pages/sub.html
+++ b/pages/sub.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>부산관광공사</title>
-    <link rel="stylesheet" href="../css/y_05.css" />
+    <link rel="stylesheet" href="../css/sub.css" />
   </head>
   <body style="overflow-x: hidden">
     <div class="title_all">
@@ -32,7 +32,27 @@
         </div>
       </div>
     </div>
-    <div class="container"></div>
+    <div class="container">
+      <div class="c_title">
+        <h1>주요사업</h1>
+        <h2>MAJOR BUSSINESS</h2>
+      </div>
+      <ul class="c_menu">
+        <li class="cli cli_01"><p>관광사업</p></li>
+        <li class="cli"><p>마케팅</p></li>
+        <li class="cli"><p>MICE</p></li>
+        <li class="cli"><p>BOF</p></li>
+        <li class="cli"><p>관광기업지원센터</p></li>
+      </ul>
+    </div>
+    <div class="first">
+      <div class="f_wbox"></div>
+      <div class="f_bbox">
+        <a href="#x">&#60;</a>
+        <a href="#x"><img src="../images/pause_02.png" alt="" /></a>
+        <a href="#x">&#62;</a>
+      </div>
+    </div>
 
     <div class="footer_top">
       <div class="center_box">
