--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
     <div class="container">
       <div class="background">
         <ul class="bul">
-          <li class="bli bli_01"><img src="./images/img.png" alt=""></li>
-          <li class="bli bli_02"><img src="./images/2030busan.jpg" alt=""></li>
+          <li class="bli"><img src="./images/img.png" alt="" /></li>
+          <li class="bli"><img src="./images/2030busan.jpg" alt="" /></li>
+          <li class="bli"><img src="./images/busantrip.jpg" alt="" /></li>
         </ul>
       </div>
       <div class="wbox_01">
         <ul class="wbox_01ul">
-          <li class="wli wli_01"><a href="#x">제17회 부산불꽃축제</a></li>
-          <li class="wli wli_02"><a href="#x">2030 부산월드엑스포</a></li>
+          <li class="wli"><a href="#x">제17회 부산불꽃축제</a></li>
+          <li class="wli"><a href="#x">2030 부산월드엑스포</a></li>
+          <li class="wli"><a href="#x">부산명소 해동용궁사</a></li>
         </ul>
         <div class="p_2">
           <a href="#x" class="left">←</a>
