--- a/pages/sub.html
+++ b/pages/sub.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/sub.css" />
   </head>
   <body style="overflow-x: hidden">
+    <!-- title_all -->
     <div class="title_all">
       <div class="title">
         <div class="head">
@@ -32,7 +33,8 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <!-- Group2 -->
+    <div class="Group2">
       <div class="c_title">
         <h1>주요사업</h1>
         <h2>MAJOR BUSSINESS</h2>
@@ -45,15 +47,113 @@
         <li class="cli"><p>관광기업지원센터</p></li>
       </ul>
     </div>
-    <div class="first">
-      <div class="f_wbox"></div>
+    <!-- Group3 -->
+    <div class="Group3">
+      <div class="f_wbox">
+        <p>
+          <span>부티와</span>함께 떠나는 부산 자유여행<br />
+          부산시티투어버스와 함께 부산의 명소를 다니는 <span>3가지 노선</span>을
+          이용할 수 있습니다.
+        </p>
+      </div>
       <div class="f_bbox">
         <a href="#x">&#60;</a>
         <a href="#x"><img src="../images/pause_02.png" alt="" /></a>
         <a href="#x">&#62;</a>
       </div>
     </div>
-
+    <!-- Group4 -->
+    <div class="Group4">
+      <div class="left">
+        <img src="../images/sgroup4.png" alt="" />
+      </div>
+      <div class="right">
+        <h1>투어안내</h1>
+        <p>
+          레드라인의 경우 부산역에서 출발해 UN기념공원을 거쳐 광안리, 그리고
+          쇼핑과 볼거리가<br />
+          가득한 마린시티와 해운대, 센텀시티를 비롯한 총 15개 정류장을 다닙니다.
+          블루라인은<br />
+          해운대해수욕장을 시작으로 달맞이길, 청사포, 송정해수욕장 등 자연과
+          만날 수 있는 구간을<br />
+          운행합니다. 그린라인은 부산역을 출발해 용두산공원, 오륙도 스카이워크
+          등 태종대<br />
+          방면으로 14개 정류장을 오고 갑니다.
+        </p>
+        <p>
+          <span class="c1a9cd6">></span>
+          <span class="c0a60bc">레드라인 :</span> 부산역 - 광안리 - 해운대<br />
+          <span class="c1a9cd6">></span>
+          <span class="c0a60bc">블루라인 :</span> 해운대 - 송정 - 용궁사 -
+          기장시장<br />
+          <span class="c1a9cd6">></span>
+          <span class="c0a60bc">그린라인 :</span> 부산역 - 태종대 - 송도<br />
+          <span class="c1a9cd6">></span> <span class="c0a60bc">테마코스 :</span>
+          야경테마(브릿지투어), 역사테마 [사전예약 운영]
+        </p>
+        <div class="Rectangle3">
+          <div class="Rectangle3_text">웹리플렛 바로가기</div>
+          <img src="../images/Shape-5.png" alt="" class="shape5" />
+        </div>
+        <div class="BUSANCITYTOUR">BUSAN CITY TOUR</div>
+      </div>
+    </div>
+    <!-- Group5 -->
+    <div class="Group5">
+      <div class="Group5_c">
+        <div class="Group5_tb">
+          <div class="Group5_t">부산시티투어</div>
+          <div class="Group5_t2">매주 월요일, 화요일 휴무</div>
+        </div>
+        <ul class="Group5_ul">
+          <li class="Group5_li">
+            <div class="Group5_li_t">성인</div>
+            <div class="Group5_li_t2">15,000원</div>
+          </li>
+          <li class="Group5_li">
+            <div class="Group5_li_t">소인</div>
+            <div class="Group5_li_t2">8,000원</div>
+          </li>
+          <li class="Group5_li">
+            <div class="Group5_li_t">대표전화</div>
+            <div class="Group5_li_t2">051-464-9898</div>
+          </li>
+          <li class="Group5_li">
+            <div class="Group5_li_t">홈페이지</div>
+            <div class="Group5_li_t2">cityourbusan.com</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- Group6 -->
+    <div class="Group6">
+      <div class="Group6_l">
+        <div class="Group6_t">찾아오시는 길</div>
+      </div>
+      <div class="Group6_r">
+        <div class="Group6_tp">
+          운행시간은 기상 및 교통사정에 따라서 변경될 수 있습니다.
+        </div>
+        <ul class="Group6_ul">
+          <li class="Group6_li">
+            <img src="../images/location_b.png" alt="" />
+            <div class="Group6_tl">주소</div>
+            <div class="Group6_tr">부산 동구 중앙대로 192</div>
+          </li>
+          <li class="Group6_li">
+            <img src="../images/call.png" alt="" />
+            <div class="Group6_tl">전화번호</div>
+            <div class="Group6_tr">051-464-9898</div>
+          </li>
+          <li class="Group6_li">
+            <img src="../images/bus.png" alt="" />
+            <div class="Group6_tl">대중교통</div>
+            <div class="Group6_tr">1호선(부산역) 4번 출구</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- footer_top -->
     <div class="footer_top">
       <div class="center_box">
         <div class="top_title">
@@ -115,6 +215,7 @@
         </ul>
       </div>
     </div>
+    <!-- footer -->
     <div class="footer">
       <div class="footer_content">
         <h2 class="footer_title">부산관광공사</h2>
@@ -150,6 +251,7 @@
         </div>
       </div>
     </div>
+    <!-- top -->
     <a href="#" class="top"></a>
   </body>
 </html>
