--- a/pages/sub.html
+++ b/pages/sub.html
@@ -133,7 +133,7 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3263.694478263138!2d129.03719697572436!3d35.11433916090672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568e97d34b81df7%3A0xd9396fc2f52433bc!2z67aA7IKw6rSR7Jet7IucIOuPmeq1rCDspJHslZnrjIDroZwgMTky!5e0!3m2!1sko!2skr!4v1673597281084!5m2!1sko!2skr"
           width="745"
           height="453"
-          style="border: 0"
+          style="border: 1px solid #000101"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
