--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
       <ul>
         <li class="trip">
           <img src="images/trip.jpg" alt="" />
-          <img src="images/Layer.png" alt="" class="layer" />
-          <div class="circle">Monthly<br />Busan</div>
+          <img src="images/Layer-2.png" alt="" class="layer" />
+          <div class="circle circle_2">BEST<br />Busan</div>
           <p>
-            이달의<br />
-            부산여행지
+            부산의<br />
+            인기여행지
           </p>
         </li>
         <li class="conduct_01">
