--- a/pages/sub_2.html
+++ b/pages/sub_2.html
@@ -56,10 +56,38 @@
     </div>
     <!-- Group4 -->
     <div class="Group4">
+      <div class="Group4_line"></div>
       <h2>부산 관광 홍보 및<br />활성화 활동</h2>
-      <ul>
-        <li><span class="c00d8ff"></span></li>
+      <ul class="t_ul">
+        <li class="i_li"><span class="c00d8ff">&#62;</span> 박람회 참가</li>
+        <li class="i_li"><span class="c00d8ff">&#62;</span> 설명회 개최</li>
+        <li class="i_li"><span class="c00d8ff">&#62;</span> 매체광고</li>
+        <li class="i_li"><span class="c00d8ff">&#62;</span> 프로모션</li>
+        <li class="i_li"><span class="c00d8ff">&#62;</span> 해외홍보사무소</li>
       </ul>
+      <h3>
+        <span class="c00c6ff">부산 관광 홍보 및 활성화를 위해</span><br />해외
+        시장을 대상으로 다양한 마케팅을 추진하고 있습니다.
+      </h3>
+      <p>
+        연간 20여 회의 각국 여행박람회에 참가하고 있으며, 동시에 업계를 대상으로
+        설명회를 개최하고<br />
+        있습니다. 또한, 부산 관광을 널리 알리기 위해 옥외광고, 매체(TV, 라디오,
+        지면)를 활용한 홍보 및 온라인<br />
+        여행사(OTA) 공동 홍보·프로모션을 추진하고 있습니다.<br /><br />
+
+        아울러 현지 마케팅을 위해 중국, 일본, 대만, 태국, 말레이시아 5개 국가에
+        해외홍보사무소를 개설하여<br />
+        운영하고 있습니다.
+      </p>
+      <div class="global_marketing">GLOBAL MARKTING</div>
+      <ul class="i_ul">
+        <li class="i_li"><img src="../images/sub_2expo.png" alt="" /></li>
+        <li class="i_li"><img src="../images/sub_2gstar.png" alt="" /></li>
+        <li class="i_li"><img src="../images/sub2_mascot.png" alt="" /></li>
+        <li class="i_li"><img src="../images/sub2_spring.png" alt="" /></li>
+      </ul>
+      <img src="../images/Rectangle-8.png" alt="" class="rectangle" />
     </div>
     <!-- footer -->
     <div class="footer">
