--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>부산관광공사</title>
     <link rel="stylesheet" href="css/main.css" />
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="./js/wbox_01.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
   </head>
   <body style="overflow-x: hidden">
     <div class="title_all">
@@ -35,13 +44,12 @@
       </div>
     </div>
     <div class="container">
-      <div class="background">
-        <ul class="bul">
-          <li class="bli"><img src="./images/img.png" alt="" /></li>
-          <li class="bli"><img src="./images/2030busan.jpg" alt="" /></li>
-          <li class="bli"><img src="./images/busantrip.jpg" alt="" /></li>
-        </ul>
+      <div class="bul">
+        <div class="bli"><img src="./images/img.png" alt="" /></div>
+        <div class="bli"><img src="./images/2030busan.jpg" alt="" /></div>
+        <div class="bli"><img src="./images/busantrip.jpg" alt="" /></div>
       </div>
+
       <div class="wbox_01">
         <ul class="wbox_01ul">
           <li class="wli"><a href="#x">제17회 부산불꽃축제</a></li>
@@ -590,5 +598,7 @@
       </div>
     </div>
     <a href="#" class="top"></a>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/wbox_01.js"></script>
   </body>
 </html>
