--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
     </div>
     <div class="container">
       <div class="bul">
-        <div class="bli"><img src="./images/img.png" alt="" /></div>
-        <div class="bli"><img src="./images/2030busan.jpg" alt="" /></div>
-        <div class="bli"><img src="./images/busantrip.jpg" alt="" /></div>
+        <div class="bli bli_1"></div>
+        <div class="bli bli_2"></div>
+        <div class="bli bli_3"></div>
       </div>
 
       <div class="wbox_01">
-        <ul class="wbox_01ul">
-          <li class="wli"><a href="#x">제17회 부산불꽃축제</a></li>
-          <li class="wli"><a href="#x">2030 부산월드엑스포</a></li>
-          <li class="wli"><a href="#x">부산명소 해동용궁사</a></li>
-        </ul>
+        <div class="wbox_01ul">
+          <div class="wli"><a href="#x">제17회 부산불꽃축제</a></div>
+          <div class="wli"><a href="#x">2030 부산월드엑스포</a></div>
+          <div class="wli"><a href="#x">부산명소 해동용궁사</a></div>
+        </div>
         <div class="p_2">
           <a href="#x" class="left">←</a>
           <a href="#x" class="start">
