--- a/index.html
+++ b/index.html
@@ -599,6 +599,6 @@
     </div>
     <a href="#" class="top"></a>
     <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="./js/wbox_01.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
